# src/app/app.routes.ts
@@ -6,11 +6,14 @@ import { ReportComponent } from './features/report/report-component';
 import { UserComponent } from './features/user/user-component';
 import { DashboardComponent } from './features/dashboard/dashboard-component';
 import { authGuard } from './core/auth/auth.guard';
+import { deliverableResolver, taskResolver, tasksResolver, userResolver } from './shared/services/resolvers.service';
+import { TaskDetail } from './features/task-detail/task-detail.component';
+import { DeliverableDetail } from './features/deliverable-detail/deliverable-detail.component';
 export const routes: Routes = [
   {
     path: '',
     component: DashboardComponent,
-    canActivate: [authGuard]
+    canActivate: [authGuard],
   },
   {
     path: 'login',
@@ -19,38 +22,60 @@ export const routes: Routes = [
   {
     path: 'user',
     component: UserComponent,
-    canActivate: [authGuard]
+    canActivate: [authGuard],
   },
   {
     path: 'user/:id',
     component: UserComponent,
+    canActivate: [authGuard],
+    resolve: {
+      user: userResolver,
+    },
   },
   {
     path: 'task',
     component: TaskComponent,
+    canActivate: [authGuard],
+    resolve: {
+      tasks: tasksResolver,
+    },
   },
   {
     path: 'task/:id',
-    component: TaskComponent,
+    component: TaskDetail,
+    canActivate: [authGuard],
+    resolve: {
+      task: taskResolver,
+    },
   },
   {
     path: 'deliverable',
     component: DeliverableComponent,
+    canActivate: [authGuard],
   },
   {
     path: 'deliverable/:id',
-    component: DeliverableComponent,
+    component: DeliverableDetail,
+    canActivate: [authGuard],
+    resolve: {
+      deliverable: deliverableResolver,
+    },
   },
   {
     path: 'report',
     component: ReportComponent,
+    canActivate: [authGuard],
   },
   {
     path: 'report/:id',
     component: ReportComponent,
+    canActivate: [authGuard],
+    resolve: {
+      report: deliverableResolver,
+    },
   },
   {
     path: '**',
-    redirectTo: 'login'
-  }
+    redirectTo: 'login',
+  },
 ];
